app-notifier/ingress/scenerio-ingress-docker-kube.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
        - path: /order
          backend:
            serviceName: web-order
            servicePort: 8080
    - host: kubernetes.docker.internal
      http:
        paths:
        - path: /payment
          backend:
            serviceName: web-payment
            servicePort: 8080
