app-notifier/ingress/scenerio-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: bdmapper.com
      http:
        paths:
        - path: /
          backend:
            serviceName: web-default
            servicePort: 8080

    - host: order.bdmapper.com
      http:
        paths:
        - path: /
          backend:
            serviceName: web-order
            servicePort: 8080
    - host: payment.bdmapper.com
      http:
        paths:
        - path: /
          backend:
            serviceName: web-payment
            servicePort: 8080

    - host: bdmapper.com
      http:
        paths:
        - path: /order
          backend:
            serviceName: web-order
            servicePort: 8080
    - host: bdmapper.com
      http:
        paths:
        - path: /payment
          backend:
            serviceName: web-payment
            servicePort: 8080
